--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -49,14 +49,14 @@
   </div>
 
 
-  <div *ngIf="['CEO','CTO','TeamLead','PM'].includes(user.role)">
+  <div *ngIf="['CEO','CTO','TeamLead','PM','Developer','Intern','Internee'].includes(user.role)">
 
     <h5 class="section-title mt-4">
       <i class="fa-solid fa-users"></i> Team Survey Results
     </h5>
 
     <div class="team-scroll">
-      <ng-container *ngIf="teamMatrixRows.length > 0 && uniqueSurveys.length > 0; else noTeamSurvey">
+  <ng-container *ngIf="visibleTeamMatrixRows.length > 0 && uniqueSurveys.length > 0; else noTeamSurvey">
         <table class="team-table matrix-table">
           <thead>
             <tr>
@@ -66,7 +66,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let row of teamMatrixRows; let ri = index" class="click-row">
+            <tr *ngFor="let row of visibleTeamMatrixRows; let ri = index" class="click-row">
               <td class="user-cell">
                 <div class="user-name">{{ row.name }}</div>
                 <div class="user-email">{{ row.userId.email }}</div>
